--- a/api/blogs/models/blogs.settings.json
+++ b/api/blogs/models/blogs.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "blogs",
   "info": {
-    "name": "blogs"
+    "name": "blogs",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -18,21 +19,21 @@
     "blogcontent": {
       "type": "richtext"
     },
+    "categories": {
+      "via": "blogs",
+      "collection": "categories"
+    },
     "featuredimage": {
       "model": "file",
       "via": "related",
       "allowedTypes": [
-        "images",
         "files",
+        "images",
         "videos"
       ],
       "plugin": "upload",
       "required": false,
       "pluginOptions": {}
-    },
-    "categories": {
-      "via": "blogs",
-      "collection": "categories"
     }
   }
 }
